@@ -1,8 +1,9 @@
 h1. CHANGELOG
 
-h3. 0.6.1 May 10, 2015
+h3. 0.6.1 unreleased
 
 * add 'Business Frontpage' theme from startbootstrap.com
+* add 'Blog Home' theme from startbootstrap.com
 
 h3. 0.6.0 May 10, 2015
 
